[FIX] web_editor, web: long text and translation button overlapped
Reproduction:
1. Install Project, Helpdesk, go to Project -> Configuration -> Activity
Types-> Upload Documents
2. Type a super long text in Default Note, the text overlaps the EN
button

Reproduction 2:
1. Go to Helpdesk -> configuration -> Helpdesk Teams -> Customer Care
2. Type a super long text in the description of the team, the text
overlaps the EN button

Fix: we set concrete padding to the right to make sure the translation
button is not overlapped. The fix needs to be done in enterprise too

Note: The reproduction 2 is another sub-issue found when fixing the
first one. Reproduction 1 is for the note field with oe-bordered-editor,
and reproduction 2 is for the note field without it.

Related Previous Commit:
Odoo:
https://github.com/odoo-dev/odoo/commit/26ecbc16bc8079c7bb08095f1b27b4f68ca0e947

Enterprise:
https://github.com/odoo-dev/enterprise/commit/e2ca9d5a113bc3adbe085057eff778b24abf5ddc

task-3047773

closes odoo/odoo#117156

Related: odoo/enterprise#39038

--- a/addons/web/static/src/legacy/scss/form_view.scss
+++ b/addons/web/static/src/legacy/scss/form_view.scss
@@ -662,7 +662,7 @@ $o-form-label-margin-right: 0px;
                 }
                 &.oe-bordered-editor>.note-editable {
                     border-width: 1px;
-                    padding: 4px;
+                    padding: 4px 40px 4px 4px;
                 }
             }
         }
